<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="contentDescription_activity_my_stocks">List of Companies</string>
    <string name="contentDescription_lineChart">Graph for past 1 month stock</string>
    <string name="contentDescription_FabButton">Click here to add new symbol</string>
    <string name="contentDescription_stock_symbol">Stock symbol</string>
    <string name="contentDescription_symbol">Symbol</string>
    <string name="contentDescription_symbolLable">Symbol :</string>
    <string name="contentDescription_bid_price">Bid Price</string>
    <string name="contentDescription_change">Change</string>
    <string name="contentDescription_date">Date :</string>
    <string name="contentDescription_date1">Date</string>
    <string name="contentDescription_open">Open</string>
    <string name="contentDescription_openLable">Open :</string>
    <string name="contentDescription_close">Close</string>
    <string name="contentDescription_closeLable">Close :</string>
    <string name="contentDescription_high">High</string>
    <string name="contentDescription_highLable">High :</string>
    <string name="contentDescription_low">Low</string>
    <string name="contentDescription_lowLable">Low :</string>
    <string name="input_prefill" />
    <string name="empty_view_text">Oops !! No data available ...</string>
    <string name="No_data_available">No data available, Please wait while fatching data from Internet..</string>
    <string name="invalid_cursor">This should only be called when Cursor is valid</string>
    <string name="BroadcastIntent_Constant">hnmn3.mechanic.optimist.stockhawk.widget.Update</string>
    <string name="Stock_symbol_not_exist">Stock Symbol does not Exist!!</string>
    <string name="could_not_move_cursor">"Could not move Cursor to position: "</string>
    <string name="stock_already_exist">This stock already saved!</string>
</resources>
