<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/list_item_stock_quote"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/stock_symbol"
            style="@style/StockSymbolTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription_stock_symbol"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            tools:text="GOOG" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/bid_price"
                style="@style/BidPriceTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription_bid_price"
                android:textColor="@android:color/black"
                tools:text="1000.00" />

            <TextView
                android:id="@+id/change"
                style="@style/PercentChangeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/percent_change_pill"
                android:contentDescription="@string/contentDescription_change"
                tools:text="100%" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
